--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -3,22 +3,24 @@ name: Monitor Voli Fuerteventura
 on:
   schedule:
     - cron: '0 */6 * * *' # Gira ogni 6 ore
-  workflow_dispatch: # Permette di avviarlo a mano per testare
+  workflow_dispatch: # Permette di avviarlo a mano
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout codice
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: setup-python@v4
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
       - name: Installa dipendenze
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
       - name: Esegui script
         env:
