--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -2,9 +2,10 @@ name: Monitor Voli Fuerteventura
 
 on:
   schedule:
-    - cron: '0 */6 * * *' # Gira ogni 6 ore
-  workflow_dispatch: # Permette di avviarlo a mano
-
+    # Gira 3 volte al giorno: alle 08:00, 14:00 e 20:00 (ora UTC)
+    - cron: '0 8,14,20 * * *' 
+  workflow_dispatch:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
