--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -27,4 +27,5 @@ jobs:
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          SERPAPI_KEY: ${{ secrets.SERPAPI_KEY }}  # <--- AGGIUNGI QUESTA RIGA
         run: python main.py
